--- a/Template/Result.cshtml
+++ b/Template/Result.cshtml
@@ -1,21 +1,81 @@
 ﻿@model MarkopTest.Models.ExportResultModel
 <html>
-	<head>
-		<title>Pie Chart</title>
-		<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-	</head>
-	<body>
-		<div id="response_time_sync" style="height: 370px; width: 100%;"></div>
-		<div id="response_time_async" style="height: 370px; width: 100%;"></div>
-		<div id="distribution_time_sync" style="height: 370px; width: 100%;"></div>
-		<div id="distribution_time_async" style="height: 370px; width: 100%;"></div>
-	</body>
-	<script>
-		const syncTimesIterationsJsArray = @(Model.SyncTimesIterationsJsArray)
-		const asyncTimesIterationsJsArray = @(Model.AsyncTimesIterationsJsArray)
-		const syncTimesDistributionJsArray = @(Model.SyncTimesDistributionJsArray)
-		const asyncTimesDistributionJsArray = @(Model.AsyncTimesDistributionJsArray)
-	</script>
-    <script src="scripts/responseTime.js"></script>
-    <script src="scripts/distributionTime.js"></script>
-</html> 
+
+<head>
+    <title>Markop Load Test Result</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+
+<body>
+    <h1 class="mk-title">Markop Test</h1>
+    <div class="mk-content">
+        <div class="row">
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="summary_rang_sync" style="height: 370px;"></div>
+                </div>
+            </div>
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="summary_rang_async" style="height: 370px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="response_status_sync" style="height: 370px;"></div>
+                </div>
+            </div>
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="response_status_async" style="height: 370px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="response_time_sync" style="height: 370px;"></div>
+                </div>
+            </div>
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="response_time_async" style="height: 370px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="distribution_time_sync" style="height: 370px;"></div>
+                </div>
+            </div>
+            <div class="col-12 col-xl-6 mk-card">
+                <div class="mk-card-body">
+                    <div id="distribution_time_async" style="height: 370px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+<script>
+    const syncSummaryRange = @Raw(Model.SyncSummaryRange);
+    const asyncSummaryRange = @Raw(Model.AsyncSummaryRange);
+    const syncResponseStatus = @Raw(Model.SyncResponseStatus);
+    const asyncResponseStatus = @Raw(Model.AsyncResponseStatus);
+	const syncTimesIterationsJsArray = @Raw(Model.SyncTimesIterationsJsArray);
+	const asyncTimesIterationsJsArray = @Raw(Model.AsyncTimesIterationsJsArray);
+	const syncTimesDistributionJsArray = @Raw(Model.SyncTimesDistributionJsArray);
+	const asyncTimesDistributionJsArray = @Raw(Model.AsyncTimesDistributionJsArray);
+</script>
+<script src="scripts/responseTime.js"></script>
+<script src="scripts/summaryRange.js"></script>
+<script src="scripts/responseStatus.js"></script>
+<script src="scripts/distributionTime.js"></script>
+
+</html>
