feat: add chart color option

--- a/src/Template/Result.cshtml
+++ b/src/Template/Result.cshtml
@@ -64,6 +64,7 @@
 </body>
 
 <script>
+    const chartColor = '@Raw(Model.ChartColor)';
     const syncSummaryRange = @Raw(Model.SyncSummaryRange);
     const asyncSummaryRange = @Raw(Model.AsyncSummaryRange);
     const syncResponseStatus = @Raw(Model.SyncResponseStatus);
