--- a/src/Template/styles/main.css
+++ b/src/Template/styles/main.css
@@ -2,11 +2,69 @@
     font-family: 'Roboto', sans-serif !important;
 }
 
+html {
+    background: #e2e2e2;
+}
+
+body {
+    padding: 15px;
+    background: unset !important;
+}
+
+.mk-header {
+    padding: 15px;
+    background: #fff;
+}
+
 .mk-title {
     color: #232323;
-    margin-top: 2rem;
     font-weight: 600;
     text-align: center;
+}
+
+.mk-info-content {
+    text-align: center;
+}
+
+.mk-info {
+    margin: 10px;
+    display: inline-block;
+}
+
+.mk-info-label {
+    color: white;
+    padding: 5px 10px;
+    background: #555555;
+}
+
+.mk-info-value {
+    color: white;
+    padding: 5px 10px;
+    background: #5e8fd3;
+}
+
+.mk-info-box {
+    margin: 10px;
+    display: flex;
+    background: #fff;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid #3838381f;
+    box-shadow: inset 0 0 2px 0 #00000045;
+}
+
+.mk-info-box-label {
+    padding: 5px 10px;
+    text-align: center;
+}
+
+.mk-info-box-value {
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    background: #5e8fd3;
+    border-radius: 0 0 10px 10px;
 }
 
 .mk-content {
@@ -19,7 +77,12 @@
 
 .mk-card-body {
     padding: 25px;
+    background: #fff;
     border-radius: 10px;
     border: 1px solid #3838381f;
     box-shadow: inset 0 0 2px 0 #00000045;
+}
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    padding: 5px !important;
 }
